--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
     align-items: center;
     justify-content: center;
     margin: 10% auto 0 auto;
-    max-width: 50%;
+    max-width: 70%;
 }
 
 .stats-container {
@@ -53,7 +53,7 @@ body {
 }
 
 #progress {
-    width: 50%;
+    width: 0;
     height: 10px;
     background-color: rgb(79, 214, 84);
     border-radius: 5px;
@@ -74,7 +74,7 @@ body {
 }
 
 form {
-    margin-top: 50px;
+    margin-top: 30px;
     width: 100%;
     display: flex;
     gap: 20px;
@@ -104,20 +104,31 @@ button {
     outline: none;
 }
 
+#taskListUL {
+    list-style: none;
+    padding: 0;
+    margin: 10px 0;
+    width: 100%;
+}
+
 .todo{
+    width: 100%;
+    margin-top: 20px;
     margin-bottom: 10px;
-    padding: 0 16px;
+    padding: 0 10px;
     background-color: var(--mainBackground);
     border-radius: 15px;
     display: flex;
     align-items: center;
 }
+
 .todo .todo-text{
     padding: 15px;
     padding-right: 0;
     flex-grow: 1;
     transition: 200ms ease;
 }
+
 .delete-button{
     padding: 3px;
     background: none;
@@ -127,14 +138,19 @@ button {
     align-items: center;
     cursor: pointer;
 }
+
 .delete-button svg{
+    fill: var(--purple);
     transition: 200ms ease;
 }
+
 .delete-button:hover svg{
     fill: #ff0033;
 }
+
 .custom-checkbox{
-    border: 2px solid var(--accent-color);
+    fill: var(--purple);
+    border: 2px solid var(--purple);
     border-radius: 50%;
     min-height: 20px;
     min-width: 20px;
@@ -145,16 +161,20 @@ button {
     transition: 200ms ease;
     cursor: pointer;
 }
+
 input[type="checkbox"]:checked ~ .custom-checkbox{
     background-color: var(--accent-color);
 }
+
 input[type="checkbox"]:checked ~ .custom-checkbox svg{
     fill: var(--primary-color);
 }
+
 input[type="checkbox"]:checked ~ .todo-text{
     text-decoration: line-through;
     color: var(--secondary-color);
 }
+
 input[type="checkbox"]{
     display: none;
 }
